--- a/src/app/core/xml-report/xml-report.component.html
+++ b/src/app/core/xml-report/xml-report.component.html
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-md-12" [formGroup]="gridForm">
             <mat-card class="bridge-card mt-0" >
-                <app-data-loading-spinner *ngIf="!data && !isChildComponent()" class="teal-bar"></app-data-loading-spinner>
+                <app-data-loading-spinner *ngIf="(!data && !isChildComponent()) || reportBusy" class="teal-bar"></app-data-loading-spinner>
                 <div class="bridge-header mt-3" *ngIf="meta">
                     <div class="d-flex w-100 justify-content-between">
                         <div *ngIf="!meta['hideExport']">
