css formatting changes

--- a/src/app/core/xml-report/xml-report.component.html
+++ b/src/app/core/xml-report/xml-report.component.html
@@ -4,44 +4,61 @@
 <form #xmlReportForm="ngForm">
     <div class="container margin-top-10px" *ngIf="fieldManager && fieldManager.getAllXmlFields().length > 0" [hidden]="filterVisibility">
         <mat-card>
-            <div class="form-group row margin-0px padding-0px margin-bottom-m5px" *ngFor="let field of fieldManager.getAllXmlFields()">
-                <div class="input-group input-group-sm mb-3 col-md-4 padding-0px">
-                    <div class="input-group-prepend">
-                        <label class="input-group-text" for="{{field.fieldId}}_Operator" style="width: 125px;">{{field.fieldName}}</label>
-                    </div>
-                    <select class="form-control form-control-sm" id="{{field.fieldId}}_Operator" name="{{field.fieldId}}_Operator" [(ngModel)]="field.operator">
-                        <option *ngFor="let filter of field.getReportFilters()" 
-                            [ngValue]="filter.getOperator()">{{filter.getOperatorName()}}</option>
-                    </select>
+            <div class="form-group row padding-0px margin-0px" *ngFor="let field of fieldManager.getAllXmlFields()">
+                <div class="col-md-3">
+                    <mat-form-field class="width-100">
+                        <mat-label>{{field.fieldName}}</mat-label>
+                        <select matNativeControl id="{{field.fieldId}}_Operator" name="{{field.fieldId}}_Operator" [(ngModel)]="field.operator">
+                            <option *ngFor="let filter of field.getReportFilters()" 
+                                [ngValue]="filter.getOperator()">{{filter.getOperatorName()}}</option>
+                        </select>
+                    </mat-form-field>
                 </div>
-                <div class="col-md-4 form-control-sm" *ngIf="field.operator == 'IN' || field.operator == 'NOT IN'">
-                        <input type="text" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
+                <div class="col-md-4  margin-bottom-m5px" *ngIf="field.operator == 'IN' || field.operator == 'NOT IN'">
+                    <input type="text" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
                         required (focus)="initSelect2(field.fieldId);" [(ngModel)]="field.value1" />
                 </div>
-                <div class="col-md-2 padding-0px" *ngIf="field.operator != 'IN' && field.operator != 'NOT IN'">
-                    <input type="text" class="form-control form-control-sm" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
-                        required [(ngModel)]="field.value1" #name="ngModel"
-                        *ngIf="field.fieldType == 'TEXT' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
-                    <input type="text" class="form-control form-control-sm" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
-                        required [pattern]="RegexPattern.INTEGER_REGEX" #integer1="ngModel" 
-                        [(ngModel)]="field.value1" *ngIf="field.fieldType == 'INTEGER' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
-                    <input type="text" class="form-control form-control-sm" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
-                        required [pattern]="RegexPattern.NUMERIC_REGEX" 
-                        [(ngModel)]="field.value1" *ngIf="field.fieldType == 'NUMERIC' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
-                    <input type="text" class="form-control form-control-sm datepicker" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
-                        required
-                        [(ngModel)]="field.value1" *ngIf="field.fieldType == 'DATE' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
+                <div class="col-md-2" *ngIf="field.operator != 'IN' && field.operator != 'NOT IN'">
+                    <mat-form-field class="width-100" *ngIf="field.fieldType == 'TEXT' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
+                        <input matInput placeholder="Value1"  type="text" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
+                            [(ngModel)]="field.value1" #name="ngModel">
+                    </mat-form-field>
+                    <mat-form-field class="width-100" *ngIf="field.fieldType == 'INTEGER' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
+                        <input matInput  placeholder="Value1"  type="text" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
+                            [pattern]="RegexPattern.INTEGER_REGEX" [(ngModel)]="field.value1" #name="ngModel">
+                    </mat-form-field>
+                    <mat-form-field class="width-100" *ngIf="field.fieldType == 'NUMERIC' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
+                        <input matInput  placeholder="Value1"  type="text" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
+                            [pattern]="RegexPattern.NUMERIC_REGEX" [(ngModel)]="field.value1" #name="ngModel">
+                    </mat-form-field>
+                    <div class="input-group form-control-sm padding-0px" *ngIf="field.fieldType == 'DATE' && field.operator != 'NULL' && field.operator != 'NOT NULL'">
+                        <input placeholder="yyyy-mm-dd" id="{{field.fieldId}}_1" name="{{field.fieldId}}_1" 
+                            [(ngModel)]="field.value1" ngbDatepicker #d="ngbDatepicker" class="width-75">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                                <i class="fa fa-calendar"></i>
+                            </button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-2 padding-0px" *ngIf="field.operator != 'IN' && field.operator != 'NOT IN'">
-                    <input type="text" class="form-control form-control-sm" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" [(ngModel)]="field.value2" 
-                        required [pattern]="RegexPattern.INTEGER_REGEX" 
-                        *ngIf="field.fieldType == 'INTEGER' && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
-                    <input type="text" class="form-control form-control-sm" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" [(ngModel)]="field.value2" 
-                        required [pattern]="RegexPattern.NUMERIC_REGEX" 
-                        *ngIf="field.fieldType == 'NUMERIC' && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
-                    <input type="text" class="form-control form-control-sm datepicker" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" [(ngModel)]="field.value2" 
-                        required
-                        *ngIf="field.fieldType == 'DATE'    && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
+                <div class="col-md-2" *ngIf="field.operator != 'IN' && field.operator != 'NOT IN'">
+                    <mat-form-field class="width-100" *ngIf="field.fieldType == 'INTEGER' && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
+                        <input matInput  placeholder="Value2"  type="text" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" 
+                            [pattern]="RegexPattern.INTEGER_REGEX" [(ngModel)]="field.value2" #name="ngModel">
+                    </mat-form-field>
+                    <mat-form-field class="width-100" *ngIf="field.fieldType == 'NUMERIC' && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
+                        <input matInput  placeholder="Value2"  type="text" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" 
+                            [pattern]="RegexPattern.NUMERIC_REGEX" [(ngModel)]="field.value2" #name="ngModel">
+                    </mat-form-field>
+                    <div class="input-group form-control-sm padding-0px" *ngIf="field.fieldType == 'DATE' && (field.operator == 'BETWEEN' || field.operator == 'NOT BETWEEN')">
+                        <input placeholder="yyyy-mm-dd" id="{{field.fieldId}}_2" name="{{field.fieldId}}_2" 
+                            [(ngModel)]="field.value2" ngbDatepicker #d="ngbDatepicker" class="width-75">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                                <i class="fa fa-calendar"></i>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4 form-control-sm error-message">
                     <span *ngIf="!isFieldValid(xmlReportForm, field.fieldId, 1, 2)">&nbsp;Invalid input1</span>
