support for export limit

--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,5 +1,5 @@
 <form>
   <div class="margin-5px">
-    <app-xml-report xmlReportName="{{getXmlReportName()}}" customAction="{{customActions}}"> </app-xml-report>
+    <app-xml-report xmlReportName="{{getXmlReportName()}}" customAction="{{customActions}}" exportLimit="5000"> </app-xml-report>
   </div>
 </form>
